--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -141,6 +141,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="188dp"
         android:background="@drawable/btn_bg"
+        android:onClick="addUser"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="@+id/inputEmail"
         app:layout_constraintHorizontal_bias="0.0"
