--- a/app/src/main/res/layout/activity_detail_comment.xml
+++ b/app/src/main/res/layout/activity_detail_comment.xml
@@ -21,16 +21,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
+            <TextView
                 android:id="@+id/title_comment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="61dp"
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Title comment"
                 android:inputType="textPersonName" />
 
-            <EditText
+
+            <TextView
                 android:id="@+id/comment"
                 android:layout_width="match_parent"
                 android:layout_height="236dp"
@@ -39,19 +40,15 @@
                 android:hint="text" />
 
 
-            <EditText
+            <TextView
                 android:id="@+id/comment_date"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="39dp"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Date of comment" />
+                android:inputType="text" />
 
-            <CheckBox
-                android:id="@+id/checkBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Favourite" />
+
 
         </LinearLayout>
 
